--- a/gradle.properties
+++ b/gradle.properties
@@ -22,5 +22,5 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.enableJetifier=true
-YOUTUBE_API_KEY = "AIzaSyA2CwcGCLzf4753G6NvH1nxO3J0sAGc2tA"
+YOUTUBE_API_KEY = "here"
 YOUTUBE_BASE_URL = "https://www.googleapis.com/youtube/v3/"
