--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,7 @@ hiltAndroid = "2.49"
 ytPlayerCore = "12.1.0"
 imagepicker = "2.1"
 photoeditor = "3.0.2"
+interactivemedia = "3.34.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -89,6 +90,7 @@ hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref
 ytPlayerCore = { group = "com.pierfrancescosoffritti.androidyoutubeplayer", name = "core", version.ref = "ytPlayerCore" }
 imagepicker = { group = "com.github.dhaval2404", name = "imagepicker", version.ref = "imagepicker" }
 photoeditor = { group = "com.burhanrashid52", name = "photoeditor", version.ref = "photoeditor" }
+interactivemedia = { group = "com.google.ads.interactivemedia.v3", name = "interactivemedia", version.ref = "interactivemedia" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
